--- a/resources/locales/en/translation.json
+++ b/resources/locales/en/translation.json
@@ -7,9 +7,16 @@
   "Quelle": "Source",
   "Url": "Url",
   "Anmerkungen": "Notes",
+  "Optionen": "Options",
   "Spaltenüberschriften ausblenden": "Hide headers",
   "Card-Layout": "Card-Layout",
   "Card-Layout für Mobile": "Card-Layout for mobile",
-  "Der Titel bringt die Kernaussage der Tabelle auf den Punkt&#46;":
-    "The title brings the core message of the table to the point."
+  "Spalte auswählen": "Select column",
+  "Farben manuell festlegen": "Set colors manually",
+  "Farben invertieren": "Invert colors",
+  "Positive Werte": "Positive values",
+  "Negative Werte": "Negative values",
+  "CSS-Klassenname": "CSS class name",
+  "Farbcode": "Color code",
+  "Der Titel bringt die Kernaussage der Tabelle auf den Punkt&#46;": "The title brings the core message of the table to the point."
 }
