added notification translations

--- a/resources/locales/de/translation.json
+++ b/resources/locales/de/translation.json
@@ -1,1 +1,20 @@
-{}
+{
+    "notifications": {
+        "customBuckets": {
+            "title": "Manuelle Grenzen",
+            "body": "Die manuellen Grenzen umfassen nicht alle der in der Datentabelle eingegebenen Werte."
+        },
+        "numberBucketsExceedsDataSet": {
+            "title": "Anzahl Buckets",
+            "body": "Die Anzahl Buckets ist grösser als die Anzahl unterschiedlicher Werte in der Datentabelle"
+        },
+        "numberCategoriesOutOfColorScale": {
+            "title": "Farbskala",
+            "body": "Die Anzahl unterschiedlicher Kategorien ist höher als wir mit unserer Hauptfarbskala abdecken können"
+        },
+        "numberBucketsOutOfColorScale": {
+            "title": "Farbskala",
+            "body": "Die Anzahl Buckets ist höher als wir mit unseren Farbskalen abdecken können"
+        }
+    }
+}
