--- a/resources/locales/de/translation.json
+++ b/resources/locales/de/translation.json
@@ -10,7 +10,7 @@
         },
         "numberCategoriesOutOfColorScale": {
             "title": "Farbskala",
-            "body": "Die Anzahl unterschiedlicher Kategorien ist höher als wir mit unserer Hauptfarbskala abdecken können"
+            "body": "Die Anzahl unterschiedlicher Kategorien ist höher als mit der Hauptfarbskala abgedeckt werden kann"
         },
         "numberBucketsOutOfColorScale": {
             "title": "Farbskala",
