--- a/resources/locales/fr/translation.json
+++ b/resources/locales/fr/translation.json
@@ -9,6 +9,7 @@
   "Anmerkungen": "Remarques",
   "Optionen": "Options",
   "Spaltenüberschriften ausblenden": "Masquer les en-têtes",
+  "Legende ausblenden": "Masquer légende",
   "Card-Layout": "Mise en page",
   "Card-Layout für Mobile": "Mise en page pour mobile",
   "Spalte auswählen": "Sélectionnez la colonne",
