--- a/resources/locales/en/translation.json
+++ b/resources/locales/en/translation.json
@@ -9,6 +9,7 @@
   "Anmerkungen": "Notes",
   "Optionen": "Options",
   "Spaltenüberschriften ausblenden": "Hide headers",
+  "Legende ausblenden": "Hide legend",
   "Card-Layout": "Card-Layout",
   "Card-Layout für Mobile": "Card-Layout for mobile",
   "Spalte auswählen": "Select column",
