Refactoring rendering scripts approach for pagination

--- a/resources/locales/en/translation.json
+++ b/resources/locales/en/translation.json
@@ -10,6 +10,7 @@
   "Optionen": "Options",
   "Spaltenüberschriften ausblenden": "Hide headers",
   "Legende ausblenden": "Hide legend",
+  "Zeilen ausblenden nach": "Hide rows after",
   "Card-Layout": "Card-Layout",
   "Card-Layout für Mobile": "Card-Layout for mobile",
   "Spalte auswählen": "Select column",
