--- a/resources/locales/fr/translation.json
+++ b/resources/locales/fr/translation.json
@@ -10,6 +10,7 @@
   "Optionen": "Options",
   "Spaltenüberschriften ausblenden": "Masquer les en-têtes",
   "Legende ausblenden": "Masquer légende",
+  "Zeilen ausblenden nach": "Masquer les lignes après",
   "Card-Layout": "Mise en page",
   "Card-Layout für Mobile": "Mise en page pour mobile",
   "Spalte auswählen": "Sélectionnez la colonne",
