Added test for country emoji

--- a/resources/locales/en/translation.json
+++ b/resources/locales/en/translation.json
@@ -21,6 +21,7 @@
   "CSS-Klassenname": "CSS class name",
   "Farbcode": "Color code",
   "Der Titel bringt die Kernaussage der Tabelle auf den Punkt&#46;": "The title brings the core message of the table to the point.",
+  "Emoji der Landesflagge": "Country flag emojis",
   "notifications": {
     "customBuckets": {
       "title": "Custom borders",
