--- a/resources/locales/fr/translation.json
+++ b/resources/locales/fr/translation.json
@@ -20,5 +20,6 @@
   "Negative Werte": "Valeurs négatives",
   "CSS-Klassenname": "Nom de la classe CSS",
   "Farbcode": "Code couleur",
-  "Der Titel bringt die Kernaussage der Tabelle auf den Punkt&#46;": "Le titre apporte le message de base du table au point."
+  "Der Titel bringt die Kernaussage der Tabelle auf den Punkt&#46;": "Le titre apporte le message de base du table au point.",
+  "Emoji der Landesflagge": "Émoji du drapeau du pays"
 }
