--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,5 @@
 - Discuss: formatNoGroupingSeparator (data.ts)
   - why are different formattings for when there are numbers over 10000
+
+- Write more specific tests for legend
+- write more specific tests for methodiek
